# kconfirm

./: Cargo.toml  README.md  flake.nix
.github/: FUNDING.yml
.github/workflows/: rust.yml
findings/: README.md  dead_links_7_0_rc6.txt
kconfirm-cli/: Cargo.toml
kconfirm-cli/src/: main.rs
kconfirm-lib/: Cargo.toml
kconfirm-lib/src/: analyze.rs  checks.rs  dead_links.rs  lib.rs  output.rs  symbol_table.rs
kconfirm-linux/: Cargo.toml
kconfirm-linux/src/: lib.rs  linux.rs  main.rs
src/: analyze.rs  dead_links.rs  lib.rs  linux.rs  main.rs  output.rs
tests/: backwards_range.rs  coreboot_26_03.rs  dead_code.rs  dead_link.rs  failed_parse.rs  linux_6_19_0.rs  selects.rs  style.rs
tests/common/: mod.rs
tests/fixtures/: failed_parse.Kconfig  golden.Kconfig
tests/fixtures/dead_code/: dead_default_condition_1.Kconfig  dead_default_condition_2.Kconfig  dead_default_condition_3.Kconfig  dead_imply_condition_1.Kconfig  dead_imply_condition_2.Kconfig  dead_range_condition_1.Kconfig  dead_range_condition_2.Kconfig  dead_select.Kconfig  dead_select_condition.Kconfig  duplicate_default_dumb_1.Kconfig  duplicate_default_dumb_2.Kconfig  duplicate_dependency_dumb.Kconfig  duplicate_dependency_if.Kconfig  duplicate_imply_1.Kconfig  duplicate_imply_2.Kconfig  duplicate_range_1.Kconfig  duplicate_range_2.Kconfig  duplicate_select_1.Kconfig  duplicate_select_2.Kconfig
tests/fixtures/dead_links/: dead_link.Kconfig
tests/fixtures/ranges/: backwards_range.Kconfig
tests/fixtures/selects/: select_visible_implicit.Kconfig  select_visible_prompt.Kconfig
tests/fixtures/style/: duplicate_value.Kconfig  ungrouped_1.Kconfig  ungrouped_2.Kconfig  ungrouped_3.Kconfig  ungrouped_4.Kconfig
