[package]
name = "kconfirm"
repository = "https://github.com/julianbraha/kconfirm"
license-file = "LICENSE"
description = "A static analysis tool for Kconfig"
keywords = ["kconfig", "static", "analysis", "detect"]
categories = ["development-tools", "config", "command-line-utilities"]
exclude = ["assets/", "findings/"]
version = "0.5.1"
rust-version = "1.86.0"

edition = "2024"

[workspace]
members = ["kconfirm-lib", "kconfirm-cli", "kconfirm-linux"]
resolver = "3"

[workspace.dependencies]
nom-kconfig = { version = "0.8.0", features = ["coreboot"] }

log = "0.4.29"
env_logger = "0.11.10"

clap = { version = "4.6.0", features = ["derive"] }

#[profile.release]
#opt-level = 3     # maximum
#lto = "fat"
#codegen-units = 1
