[package]
name = "kconfirm-cli"
version = "0.5.1"
edition = "2024"

[dependencies]
kconfirm-lib = { path = "../kconfirm-lib" }
kconfirm-linux = { path = "../kconfirm-linux" }

clap = { workspace = true }
nom-kconfig = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
