[package]
name = "kconfirm-lib"
version = "0.7.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
nom-kconfig = { workspace = true }
reqwest = { version = "0.13", features = ["blocking"] }
regex = "1.12"
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = []
coreboot = ["nom-kconfig/coreboot"]
