[package]
name = "kconfirm-linux"
version = "0.6.0"
edition = "2024"
rust-version.workspace = true


[dependencies]
kconfirm-lib = { path = "../kconfirm-lib" }
nom-kconfig = { workspace = true, features = ["coreboot"] }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
walkdir = "2"
